# solcrawl

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
scripts/crawler/: .env  Cargo.toml
scripts/crawler/migrations/2022-04-12-140107_create_tx/: up.sql
scripts/crawler/src/: conn.rs  handle_txs.rs  main.rs
scripts/crawler/src/models/: create_tx.rs  tx.rs
scripts/crawler/src/storage/: conn.rs  schema.rs
scripts/crawler/src/storage/models/: create_tx.rs  mod.rs  tx.rs
solcrawl/: Cargo.toml
solcrawl/src/: lib.rs
solcrawl/src/crawlers/: historical_crawler.rs  mod.rs  websocket_crawler.rs
solcrawl/src/filters/: jupiter_swap_token.rs  mod.rs
src/: main.rs
