[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solcrawl = { path = "../../solcrawl", version = "0.1.0" }
solana-client = "1.10.3"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
crossbeam = "0.8.1"
solana-transaction-status = "1.10.8"
diesel_migrations = "1.4.0"